<resources>
    <string name="app_name">30 Days of CookTok</string>
    <string name="banner">30 Days of CookTok Banner</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_desc">Description</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="day">DAY 00</string>
    <string name="home_button">Navigate back to the main screen</string>
    <string name="home">Home</string>
    <string name="tiktok_video">TikTok Video</string>
    <string name="how">How to make this recipe?</string>
    <string name="tiktok_logo">Tiktok Logo</string>
</resources>