<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    android:layout_margin="16dp"
    android:backgroundTint="@color/md_theme_primaryContainer"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:id="@+id/recipeCardView">

    <LinearLayout
        android:id="@+id/grid_view_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/recipe_img"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:background="@drawable/rounded_corners"
                android:clipToOutline="true"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                android:src="@drawable/recipe01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="s" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/abril_fatface_regular"
                android:maxLines="1"
                android:text="@string/recipe_name"
                android:textColor="@color/md_theme_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recipe_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="3"
                android:text="@string/recipe_desc"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="11sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_day"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/day"
                    android:textColor="@color/md_theme_inverseOnSurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                     />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>